# mcp-proxy-tool

./: .gitignore  COMPATIBILITY.md  Cargo.toml  DISTRIBUTION.md  README.md  build.rs  test_all_transports.sh  test_echo_server.py
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: package-manager-request.md
.github/workflows/: ci.yml  release.yml
packaging/: .gitignore  README.md  Update-Packages.ps1  chocolatey-template.nuspec  chocolateyinstall-template.ps1  chocolateyuninstall-template.ps1  homebrew-formula-template.rb  update-packages.sh  winget-installer-template.yaml  winget-locale-template.yaml  winget-manifest-template.yaml  winget-version-template.yaml
samples/dotnet/: mcp-server.sln
scripts/: prepare-release.ps1  validate-setup.ps1
src/: main.rs
tests/: README.md  test_all_transports.sh  test_pipe_server.py
